# turkionary

./: .env.sample  Cargo.toml  README.md  docker-compose.yml
data/: autocomplete.json
migrations/1590347707_create_terms_table/: up.sql
migrations/1590405167_create_definitions_table/: down.sql  up.sql
migrator/: Cargo.toml
migrator/src/: main.rs
scripts/: sanitize_csv.sh
src/: main.rs
src/conf/: conf.rs
src/definition/: model.rs  routes.rs
src/intl/: lang.rs
src/term/: model.rs  routes.rs
tatoeba/: Cargo.toml
tatoeba/src/: main.rs
tdk/: Cargo.toml
tureng/: Cargo.toml
tureng/src/: main.rs
