[package]
name = "turkionary"
version = "0.1.0"
authors = ["Vance Longwill <vancelongwill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["migrator", "tureng", "tatoeba"]

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
sqlx = { version = "0.3", features = [ "postgres", "chrono", "json" ] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3.5"
dotenv = "0.15.0"
serde = "1.0.110"
serde_json = "1.0.53"
