[package]
name = "migrator"
version = "0.1.0"
authors = ["Vance Longwill <vancelongwill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turkionary = { path = "../" }
sqlx = { version = "0.3", features = [ "postgres" ] }
dotenv = "0.15.0"
futures = "0.3"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
clap = "3.0.0-beta.1"
