[package]
name = "tatoeba"
version = "0.1.0"
authors = ["Vance Longwill <vancelongwill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.3", features = [ "postgres", "chrono", "json" ] }
serde = "1.0.110"
serde_json = "1.0.53"
csv = "1.1"
indicatif = "0.14.0"
bytes = "0.5.4"
