[package]
name = "tureng"
version = "0.1.0"
authors = ["Vance Longwill <vancelongwill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1.0.110"
serde_json = "1.0.53"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.3", features = [ "postgres", "chrono", "json" ] }
csv = "1.1"
